Petits changement à cause d'erreurs dans la classe GlobalExceptionHandler.